<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/theme_btn_white_press"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/activity_goodsdetail_firstitem_img_pic"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/bottom_main_press"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:maxLines="2"
            android:text="Apple iPhone 16G"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/theme_btn_red"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:paddingLeft="10dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:text="旗号:123456"
                android:textSize="12dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/activity_goosdetail_noti_time"
                    android:textSize="12dp"/>
                <com.rxjava_niupai_lqtj.myui.view.Anticlockwise
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:textSize="14dp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            style="@style/red_bg_white_txt_btn"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="计算详情"
            android:layout_height="35dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/theme_btn_white_press"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_btn"
        android:layout_marginTop="10dp"
        android:textSize="12dp"
        android:gravity="center"
        android:textColor="@color/darkgray"
        android:text="@string/activity_goosdetail_not_join"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_banner_all"
        android:visibility="visible"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/activity_goosdetail_img_txt"
                android:layout_marginLeft="10dp"
                android:textColor="@color/darkgray"/>
            <ImageView
                android:id="@+id/img_right"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:rotation="180"
                android:src="@drawable/img_back_press"/>
            <TextView
                android:layout_toLeftOf="@id/img_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:gravity="center_vertical"
                android:text="@string/activity_goosdetail_wifi_advance"
                android:layout_marginLeft="10dp"
                android:textColor="@color/lightestgray"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/activity_goosdetail_noti_before"
                android:layout_marginLeft="10dp"
                android:textColor="@color/darkgray"/>
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:rotation="180"
                android:src="@drawable/img_back_press"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/activity_goosdetail_share_bill"
                android:layout_marginLeft="10dp"
                android:textColor="@color/darkgray"/>
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:rotation="180"
                android:src="@drawable/img_back_press"/>
        </RelativeLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/activity_goosdetail_all_join_record"
                android:layout_marginLeft="10dp"
                android:textColor="@color/darkgray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:textSize="10sp"
                android:textColor="@color/lightestgray"
                android:text="( 自2015:12.12开始 )"
                />
        </LinearLayout>

    <TextView
        style="@style/red_stroke_red_txt_btn"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:padding="7dp"
        android:text="2016-05-10"
        android:layout_height="wrap_content"/>

</LinearLayout>