<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ptr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_gray"
    android:orientation="vertical">
    <RelativeLayout
    android:layout_alignParentTop="true"
    android:layout_width="match_parent"
    android:layout_height="@dimen/h_btn"
    android:background="@drawable/bg_banner_bottom">
        <ImageView
            android:id="@+id/activity_goosdetail_img_back"
            android:layout_width="@dimen/h_btn"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:scaleType="center"
            android:src="@drawable/img_back_normal"/>

        <ImageView
            android:id="@+id/activity_goosdetail_img_share"
            android:layout_width="@dimen/h_btn"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:scaleType="center"
            android:src="@drawable/img_share_normal"/>
        <ImageView
            android:id="@+id/activity_goosdetail_img_home"
            android:layout_width="@dimen/h_btn"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@id/activity_goosdetail_img_share"
            android:background="@drawable/img_share_normal"
            android:scaleType="center"/>

        <ImageView
            android:id="@+id/activity_goosdetail_img_cart"
            android:layout_width="@dimen/h_btn"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@id/activity_goosdetail_img_home"
            android:background="@drawable/img_share_normal"
            android:scaleType="center"/>
    </RelativeLayout>

    <com.rxjava_niupai_lqtj.myui.view.RecyclerViewBaseOnPullToRefresh
        android:id="@+id/activity_goosdetail_rv_detail"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        ptr:ptrAnimationStyle="flip"
        ptr:ptrDrawableEnd="@color/transparent"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:id="@+id/activity_goosdetail_ll_unsell"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_btn"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">
        <!--<ImageView-->
            <!--android:id="@+id/bottom_back_main"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="fill_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@drawable/bg_banner_all"-->
            <!--android:scaleType="center"-->
            <!--android:visibility="visible"-->
            <!--android:src="@drawable/bottom_main_normal"/>-->
        <TextView
            android:id="@+id/activity_goosdetail_buy_now"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="5dp"
            style="@style/red_bg_white_txt_btn"
            android:gravity="center"
            android:text="@string/activity_goosdetail_buy_now"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/activity_goosdetail_add_bill"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            style="@style/red_stroke_red_txt_btn"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/activity_goosdetail_add_bill"/>
    </LinearLayout>

    <LinearLayout
    android:id="@+id/activity_goosdetail_ll_selling"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:text="@string/activity_goosdetail_text_description"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/txt_edit" />
         <TextView
            android:id="@+id/activity_goosdetail_go_now"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_red"
            android:gravity="center"
            android:layout_margin="8dp"
            android:text="@string/activity_goosdetail_go_now"
            android:textColor="@color/theme_btn_white"
            android:textSize="@dimen/txt_btn" />
    </LinearLayout>
</LinearLayout>
